--- a/FunnyBot/packages.config
+++ b/FunnyBot/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net452" />
   <package id="morelinq" version="1.4.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.0.1" targetFramework="net452" />
