--- a/FunnyBot/App.config
+++ b/FunnyBot/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="FunnyBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <applicationSettings>
+        <FunnyBot.Properties.Settings>
+            <setting name="PicUrl" serializeAs="String">
+                <value>http://vse-shutochki.ru/kartinki-prikolnye</value>
+            </setting>
+            <setting name="JokeUrl" serializeAs="String">
+                <value>https://www.anekdot.ru/random/anekdot/</value>
+            </setting>
+            <setting name="AdminId" serializeAs="String">
+                <value>317300041</value>
+            </setting>
+            <setting name="BotId" serializeAs="String">
+                <value>581243302:AAFSsqS_ylNPB7-XNOmJ05Vtpih_kZbqljM</value>
+            </setting>
+        </FunnyBot.Properties.Settings>
+    </applicationSettings>
 </configuration>
