--- a/FunnyBot/Properties/Settings.settings
+++ b/FunnyBot/Properties/Settings.settings
@@ -1,6 +1,18 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FunnyBot.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="PicUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://vse-shutochki.ru/kartinki-prikolnye</Value>
+    </Setting>
+    <Setting Name="JokeUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https://www.anekdot.ru/random/anekdot/</Value>
+    </Setting>
+    <Setting Name="AdminId" Type="System.Int64" Scope="Application">
+      <Value Profile="(Default)">317300041</Value>
+    </Setting>
+    <Setting Name="BotId" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">581243302:AAFSsqS_ylNPB7-XNOmJ05Vtpih_kZbqljM</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
