--- a/FunnyBot/App.config
+++ b/FunnyBot/App.config
@@ -22,6 +22,9 @@
             <setting name="BotId" serializeAs="String">
                 <value>581243302:AAFSsqS_ylNPB7-XNOmJ05Vtpih_kZbqljM</value>
             </setting>
+            <setting name="CurrencyUrl" serializeAs="String">
+                <value>https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json</value>
+            </setting>
         </FunnyBot.Properties.Settings>
     </applicationSettings>
 </configuration>
