--- a/FunnyBot/App.config
+++ b/FunnyBot/App.config
@@ -1,30 +1,49 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="FunnyBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-    <applicationSettings>
-        <FunnyBot.Properties.Settings>
-            <setting name="PicUrl" serializeAs="String">
-                <value>http://vse-shutochki.ru/kartinki-prikolnye</value>
-            </setting>
-            <setting name="JokeUrl" serializeAs="String">
-                <value>https://www.anekdot.ru/random/anekdot/</value>
-            </setting>
-            <setting name="AdminId" serializeAs="String">
-                <value>317300041</value>
-            </setting>
-            <setting name="BotId" serializeAs="String">
-                <value>581243302:AAFSsqS_ylNPB7-XNOmJ05Vtpih_kZbqljM</value>
-            </setting>
-            <setting name="CurrencyUrl" serializeAs="String">
-                <value>https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json</value>
-            </setting>
-        </FunnyBot.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FunnyBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <applicationSettings>
+    <FunnyBot.Properties.Settings>
+      <setting name="PicUrl" serializeAs="String">
+        <value>http://vse-shutochki.ru/kartinki-prikolnye</value>
+      </setting>
+      <setting name="JokeUrl" serializeAs="String">
+        <value>https://www.anekdot.ru/random/anekdot/</value>
+      </setting>
+      <setting name="AdminId" serializeAs="String">
+        <value>317300041</value>
+      </setting>
+      <setting name="BotId" serializeAs="String">
+        <value>581243302:AAFSsqS_ylNPB7-XNOmJ05Vtpih_kZbqljM</value>
+      </setting>
+      <setting name="CurrencyUrl" serializeAs="String">
+        <value>https://bank.gov.ua/NBUStatService/v1/statdirectory/exchange?json</value>
+      </setting>
+    </FunnyBot.Properties.Settings>
+  </applicationSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
 </configuration>
