--- a/FunnyBot/packages.config
+++ b/FunnyBot/packages.config
@@ -1,10 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.8.7" targetFramework="net452" />
   <package id="morelinq" version="1.4.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="NUnit" version="3.0.1" targetFramework="net452" />
   <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net452" />
+  <package id="System.Data.SQLite" version="1.0.109.1" targetFramework="net452" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net452" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net452" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net452" />
   <package id="Telegram.Bot" version="13.4.0" targetFramework="net452" />
   <package id="Telegram.Bot.Fabric" version="1.0.5846.23609" targetFramework="net452" />
 </packages>
