--- a/FunnyBot/FunnyBot.csproj
+++ b/FunnyBot/FunnyBot.csproj
@@ -121,6 +121,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationContext.cs" />
     <Compile Include="BotCommnands.cs" />
     <Compile Include="BotSender.cs" />
     <Compile Include="Collections.cs" />
