--- a/FunnyBot/FunnyBot.csproj
+++ b/FunnyBot/FunnyBot.csproj
@@ -129,6 +129,7 @@
     <Compile Include="Collections.cs" />
     <Compile Include="BotLogic.cs" />
     <Compile Include="Bot.cs" />
+    <Compile Include="ConnectToDB.cs" />
     <Compile Include="HtmlParsing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -152,10 +153,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="AppData\BD_random.txt" />
-    <Content Include="AppData\BD_aggression.txt" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
